css/style.css
html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

#map {
  height: 100%;
  bottom: 0px;
  left: 0px;
  position: absolute;
  right: 0px;
}

#pano {
  width: 200px;
  height: 200px;
}

.container {
  height:100%;
  position: relative;
}

.hamburger {
  margin: 50px 20px;
  display: inline-block;
  cursor: pointer;
  position: fixed;
  z-index: 2;
}

.bar1, .bar2, .bar3 {
  width: 35px;
  height: 5px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
  border-radius: 2px;
}

.options-box {
  background: #ffffff;
  height: 100%;
  width: 0px;
  top: 0;
  left: 0;
  z-index: 1;
  overflow-x: hidden;
  transition: 0.5s;
  position: fixed;
}

select {
  font-size: 10px;
}

.options {
  margin-top: 20px;
  display: flex;
  justify-content: space-around;
}

.filter-box {
  margin-top: 20px;
  display: flex;
  justify-content: space-around;
}

.drawing-box {
  display: flex;
  justify-content: space-around;
}

li {
  right: 0px;
  left: 0px;
  width: 100%;
  list-style: none;
  padding: 30px;
  border-top: 1px solid #D0D7D9;
}

.search {
  margin: 100px 10px 0px 10px;
  display: flex;
  justify-content: space-around;
}

/* Animation for the hamburger bars */
.change {
  left:250px;
}

.change .bar1 {
  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
  transform: rotate(-45deg) translate(-9px, 6px);
}

.change .bar2 {
  opacity: 0;
}

.change .bar3 {
  -webkit-transform: rotate(45deg) translate(-8px, -8px);
  transform: rotate(45deg) translate(-8px, -8px);
}

